# Chavez1186563746

./: te.cpp
homework/: func.h  vector.cpp
mycode/PROJ/2021/40_arc-inte/DEngine/desdk/cpp/: CMakeLists.txt  README.md  build.sh  build_device.sh
mycode/PROJ/2021/40_arc-inte/DEngine/desdk/cpp/benchmark/: CMakeLists.txt  benchmark_dev.cc  benchmark_host.cc  fml_dsp_profile.h
mycode/PROJ/2021/40_arc-inte/arctern-base/: CMakeLists.txt  GetArcternResult.sh  build-android-arm32.sh  build-android-rk.sh  build-android-rk3568.sh  build-atlas-arm-cross.sh  build-atlas-arm.sh  build-cuda-linux.sh  build-linux-mnn.sh  build-linux-tvm.sh  build-linux.sh  build-nnie3516.sh  build-rv1109.sh  build-trt-city-product.sh  build-trt-renjushenghuo.sh  build-trt.sh  codeStyleCheck.sh  runAllUnitTest.sh  toolChain.cmake
mycode/PROJ/2021/40_arc-inte/arctern-base/CmakeCommon/: algorithmCommon.cmake  atlasAlgorithmCommon.cmake  cudaAlgorithmCommon.cmake  mnnAlgorithmCommon.cmake  rknnAlgorithmCommon.cmake  trtAlgorithmCommon.cmake
mycode/PROJ/2021/40_arc-inte/arctern-base/Example/: CMakeLists.txt
mycode/PROJ/2021/40_arc-inte/arctern-base/Example/Algorithms/TestAlgorithm02/: CMakeLists.txt  ExampleTestAlgorithm02.cpp  build-linux-test.sh
mycode/PROJ/2021/40_arc-inte/arctern-base/Example/Algorithms/ageGender/: main.cpp
mycode/PROJ/2021/40_arc-inte/arctern-base/Example/Algorithms/bannerDet/: main.cpp
mycode/PROJ/2021/40_arc-inte/arctern-base/Example/Algorithms/bodyFaceHeadDetCenter/: main.cpp
mycode/PROJ/2021/40_arc-inte/arctern-base/Example/Algorithms/cameraOcclusionDetect/: main.cpp
mycode/PROJ/2021/40_arc-inte/arctern-base/SceneCmake/: AndroidAllAlgorithms.cmake  AtlasLinuxAllAlgorithms.cmake  CudaLinuxAllAlgorithms.cmake  HisiAllAlgorithms.cmake  LinuxAllAlgorithms.cmake  LinuxMnnAlgorithms.cmake  LinuxMxnetAlgorithms.cmake  LinuxTvmAlgorithms.cmake  RK3568AllAlgorithms.cmake  RV1109AllAlgorithms.cmake  TrtAllAlgorithms.cmake  TrtCityProductAlgorithms.cmake  TrtRenjushenghuoAlgorithms.cmake
mycode/PROJ/2021/40_arc-inte/arctern-base/SystemCmake/: android-rk3568.cmake  android.cmake  arm-linux-rv1109.cmake  arm-linux.cmake  atlasLinux.cmake  linux.cmake  trt-linux.cmake
mycode/PROJ/2021/40_arc-inte/arctern-base/UnitTest/: CMakeLists.txt  OtherTest.cmake  base-unittest.h  config.h.in  main.cpp  modellist.hpp
mycode/PROJ/2021/40_arc-inte/arctern-base/UnitTest/Algorithms/: res.txt
mycode/PROJ/2021/40_arc-inte/arctern-base/UnitTest/Others/: UnitTestForTensor.cpp  UnitTestForTensor.h
mycode/PROJ/2021/40_arc-inte/arctern-base/UnitTest/UnitTestBase/: baseAlgrithm.cpp  baseAlgrithm.h  baseGroundTruth.cpp  baseGroundTruth.h  config.cpp  unittestalgrithmbase.h
mycode/PROJ/2021/40_arc-inte/arctern-base/UnitTest/cmake/: localbuild.cmake
mycode/PROJ/2021/40_arc-inte/arctern-base/UnitTest/python/: age_gender.py  face_abnomal_light.py  face_det_rtn.py  face_det_tiny.py  face_expression.py  face_feature.py  face_glass.py  face_hat.py  face_mask.py  face_noise_motionblur.py  face_occlusion_det.py  face_pose.py  face_quality.py  face_quality_pose.py  facebasic_multiattributes.py  facial_landmark.py  person_completeness.py  person_feature.py  person_quality.py  safety_dect.py  test_analysis.py  test_items_tvm.py  yamlUtil.py
mycode/PROJ/2021/40_arc-inte/arctern-base/build-trt/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt  lic.txt  lic01.txt  lic02.txt
mycode/PROJ/2021/40_arc-inte/arctern-base/cmake/: ExportFunctionMarcro.cmake  TvmModelStaticLib.cmake  colors.cmake  localbuild.cmake
mycode/PROJ/2021/40_arc-inte/arctern-base/cmake/Modules/: CMakeDetermineCCompiler.cmake  CMakeDetermineCXXCompiler.cmake  FindDetectCuda.cmake  FindvecLib.cmake
mycode/PROJ/2021/40_arc-inte/arctern-base/include/: atlasInit.h  autoTime.h
mycode/PROJ/2021/40_arc-inte/arctern-base/src/: version.h.in
mycode/PROJ/2021/40_arc-inte/arctern-base/src/Algorithms/: AtlasInterfaceCommonOperation.cpp  AtlasInterfaceCommonOperation.h  HisiInterfaceCommonOperation.cpp  HisiInterfaceCommonOperation.h  MnnInterfaceCommonOperation.cpp  MnnInterfaceCommonOperation.h  MxnetInterfaceCommonOperation.cpp  MxnetInterfaceCommonOperation.h  Rknn2InterfaceCommonOperation.cpp  Rknn2InterfaceCommonOperation.h  RknnInterfaceCommonOperation.cpp  RknnInterfaceCommonOperation.h  TrtInterfaceCommonOperation.cpp  TrtInterfaceCommonOperation.h  TvmInterfaceCommonOperation.cpp  TvmInterfaceCommonOperation.h  res.txt
mycode/PROJ/2021/40_arc-inte/arctern-base/src/Base/: YoloV3.cpp  YoloV3.h  YoloV4.cpp  YoloV4.h  algorithmbase.h  arcternalgorithm.cpp  arcternalgorithm.h  base.h  runparameter.cpp  yoloV5.cpp  yoloV5.h
mycode/PROJ/2021/40_arc-inte/arctern-base/src/Engin/: CMakeLists.txt
mycode/PROJ/2021/40_arc-inte/arctern-base/src/ImgPreProcess/: ImgPreprocessor.cmake  ImgPreprocessorOnNppEx.cpp  ImgPreprocessorOnNppEx.h  affine.cpp  affine.h  buffers.cpp  buffers.h  crop.cpp  crop.h  cvtColor.cpp  cvtColor.h  normalized.cpp  normalized.h  padding.cpp  padding.h  resize.cpp  resize.h
mycode/PROJ/2021/40_arc-inte/arctern-base/src/Processors/: NppPreprocessorEx.cpp  NppPreprocessorEx.h  alignFace.cpp  alignFace.h  atlasAclPreprocess.cpp  atlasAclPreprocess.h  common.h  opencvPreprocessor.cpp  opencvPreprocessor.h
mycode/PROJ/2021/40_arc-inte/arctern-base/src/common/: ReadWriteLock.cpp  ReadWriteLock.h  Tensor5.cpp  Tensor5.h  ThreadSafeMap.cpp  ThreadSafeMap.h  aes_cryptor.cpp  aes_cryptor.h  algUtil.cpp  algUtil.h  arcterndefs_config_analyzer.h  arcterndefs_generated.h  autoTime.cpp  common.cpp  common.h  cudaTensor.h  detectUtil.cpp  detectUtil.h  encryptor.h  encryx.cpp  encryx.h  featureUtil.cpp  featureUtil.h  file_buffer.h  imageConvert.cpp  imageConvert.h  keys.h  licenseverify.cpp  licenseverify.h  neonmathfun.h  release_utils.h  tensor.h  tensorShape.h  testUtil.h
mycode/PROJ/2021/40_arc-inte/arctern-base/src/log/: logger.cc  logger.h
mycode/PROJ/2021/40_arc-inte/arctern-base/src/python/: _arctern.cpp  _arctern2.cpp  ndarray_converter.cpp  ndarray_converter.h
test/: hi.cpp
(+4126 files in other folders)
