cmake_minimum_required(VERSION 3.0)

ADD_SUBDIRECTORY(example/video_dec)
ADD_SUBDIRECTORY(example/jpeg_dec)
#ADD_SUBDIRECTORY(example/jpeg_dec_ext)
ADD_SUBDIRECTORY(example/jpeg_enc)
ADD_SUBDIRECTORY(example/model_pred)
ADD_SUBDIRECTORY(example/model_pred_normal)
ADD_SUBDIRECTORY(example/rpc_server)
ADD_SUBDIRECTORY(example/image_proc)
ADD_SUBDIRECTORY(example/kcf_proc)
ADD_SUBDIRECTORY(example/nodebase)
ADD_SUBDIRECTORY(example/video_det)
ADD_SUBDIRECTORY(example/pic_det)
ADD_SUBDIRECTORY(example/video_det_track)
ADD_SUBDIRECTORY(example/dcmi_download)
ADD_SUBDIRECTORY(example/dcmi_upgrade)
ADD_SUBDIRECTORY(benchmark)
ADD_SUBDIRECTORY(infer_engine)
