file(GLOB SRCS *.cpp *.h)
set(PLUGIN_SOURCES ${PLUGIN_SOURCES} ${SRCS})

add_subdirectory(common)
add_subdirectory(BilinearSampler)
add_subdirectory(Embedding)
add_subdirectory(GridGenerator)
add_subdirectory(L2Normalization)
add_subdirectory(LastDimTopK)
add_subdirectory(Pad)
add_subdirectory(PReLU)
add_subdirectory(SpatialTransformer)
add_subdirectory(UpSampling)
add_subdirectory(Equal)
add_subdirectory(ModSaclar)
add_subdirectory(Repeat)
add_subdirectory(Erf)
set(PLUGIN_SOURCES ${PLUGIN_SOURCES} PARENT_SCOPE)
